[package]
name = "whois2"
version = "0.0.1"
authors = ["Timofey Kulin"]
edition = "2018"
description = "Whois library which work without whois servers config"
homepage="https://github.com/rekby/rust-whois2"
repository="https://github.com/rekby/rust-whois2"
readme="README.md"
keywords=["whois"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idna = "0.2.0"
